--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             // Format birthdate display
             const options = { year: 'numeric', month: 'long', day: 'numeric' };
             document.getElementById('birthdate-display').textContent = 
-                `Born on ${birthDate.toLocaleDateString('en-US', options)} • Counting every moment`;
+                ` Counting every moment`;
         }
         
         // Update every second
@@ -197,3 +197,4 @@
     </script>
 </body>
 </html>
+
